hphp/hack/test/typecheck/expression_trees/boolean_and.php.like_types.exp
File "boolean_and.php", line 6, characters 13-16:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 30, characters 5-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_and.php", line 6, characters 21-25:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 30, characters 5-43:
  But got `dynamic` because it is an unenforceable type
